--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
         <h2 class="title">
             Today's To Do
         </h2>
-        <i class="fa-solid fa-rotate"></i>
+        <i class="fa-solid fa-rotate" id="refresh"></i>
       </div>
       <form class="newTask d-flex">
-        <input type="text" placeholder="Enter New Task">
-        <button type="submit"><i class="fa-solid fa-arrow-turn-down-left"></i></button>
+        <input id="description" type="text" placeholder="Enter New Task">
+        <button type="button" id="addTask">add</i></button>
       </form>
       <div id="taskList"></div>
-      <button type="button" class="clearCompleted">Clear all Completed</button>
+      <button type="button" class="clearCompleted" id="clearCompleted">Clear all Completed</button>
     </div>
 </body>
 </html>
